# ovpn2ss

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  config.example.json
.github/workflows/: release.yml
docs/: architecture.md  configuration.md  development.md  third-party-licenses.md
include/ovpn2ss/: InstanceConfig.h  LwipRuntime.h  MultiInstanceManager.h  OpenVpnClient.h  OpenVpnPacketSink.h  OpenVpnTunBuilder.h  PacketBuffer.h  ShadowsocksAead.h  ShadowsocksInbound.h  TcpRelaySession.h  UdpRelaySession.h
src/: LwipRuntime.cpp  MultiInstanceManager.cpp  OpenVpnClient.cpp  OpenVpnTunBuilder.cpp  ShadowsocksAead.cpp  ShadowsocksInbound.cpp  TcpRelaySession.cpp  UdpRelaySession.cpp  main.cpp
tests/: unit_tests.cpp
